2008-08-18  Alper KANAT  <alperkanat@gmail.com>

	* settings-example.py: Reenabled english info e-mail address and added a new
	setting.. (ANONYMOUS_PASSWORD)
	* extra/initials.py: does the initial work necessary after the deployment
	for the first time.. the methods in this file are called inside manage.py..
	* comments/admin.py, comments/models.py, templates/blog/comments.html: Some
	changes are made to make raptiye work with old comments that have been
	committed by the visitors earlier.. new raptiye won't let users comment
	until they register as users..
	* users/views.py: corrected the comment line..
	* templates/blog/sidebar.html: fixed a bug in the reverse url pattern
	resolution..
	
2008-08-17  Alper KANAT  <alperkanat@gmail.com>

	* REQUIREMENTS, blog/views.py, blog/templatetags/blog_filters.py,
	comments/views.py: Removed pytz completely from the project..

2008-08-15  Alper KANAT  <alperkanat@gmail.com>

	* media/css/style.css, templates/500.html, templates/404.html: error pages
	will have interesting messages soon..
	* settings-example.py: Disabled some settings and added new applications..
	* blog/templatetags/blog_filters.py: 2 of the filters were unnecessary since
	Django does those natively..
	* templates/blog/detail.html, templates/blog/homepage.html,
	templates/blog/widgets.html, templates/feeds/latest_description.html:
	Changes for Django's native filters and some bug fixes like url pattern
	naming..
	* emplates/flatpages/: flatpages like about can be created now..
	* users/forms.py: newforms and oldforms are gone in Django.. hail the new
	king: forms!
	* urls.py: Little and temporary changes..
	
2008-08-11  Alper KANAT  <alperkanat@gmail.com>

	* templates/frontpage/homepage.html: image fields in models no longer have
	get_image_url method.. we have object.image.url instead..
	* media/js/raptiye.js: I just learned that I don't have to use
	document.ready and can use $() instead.. (thanks to jquery)